--- a/jela_svijeta.html
+++ b/jela_svijeta.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Meals of the world</title>
+    <title>Jela svijeta</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stil.css">
   </head>
@@ -11,7 +11,7 @@
     <header>
       <nav class="navbar">
         <div class="menu-container">
-          <div class="title">Meals of the world</div>
+          <div class="title">Jela svijeta</div>
         </div>
       </nav>
     </header>
